--- a/DOA_simulator.ui
+++ b/DOA_simulator.ui
@@ -33,6 +33,13 @@
           <layout class="QGridLayout" name="gridLayout_4">
            <item row="0" column="0">
             <layout class="QGridLayout" name="gridLayout_3">
+             <item row="2" column="0">
+              <widget class="QLabel" name="label_2">
+               <property name="text">
+                <string>ULA spacing:</string>
+               </property>
+              </widget>
+             </item>
              <item row="3" column="0">
               <widget class="QLabel" name="label_5">
                <property name="toolTip">
@@ -43,16 +50,10 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="1">
-              <widget class="QDoubleSpinBox" name="doubleSpinBox_ULA_d">
-               <property name="maximum">
-                <double>10.000000000000000</double>
-               </property>
-               <property name="singleStep">
-                <double>0.100000000000000</double>
-               </property>
-               <property name="value">
-                <double>0.500000000000000</double>
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_12">
+               <property name="text">
+                <string>Number of antennas:</string>
                </property>
               </widget>
              </item>
@@ -76,20 +77,6 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="label_2">
-               <property name="text">
-                <string>ULA spacing:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="4" column="0">
-              <widget class="QLabel" name="label_4">
-               <property name="text">
-                <string>UCA radius:</string>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="1">
               <widget class="QCheckBox" name="checkBox_en_UCA">
                <property name="text">
@@ -97,7 +84,30 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="1">
+             <item row="0" column="1">
+              <widget class="QSpinBox" name="spinBox_noa">
+               <property name="maximum">
+                <number>200</number>
+               </property>
+               <property name="value">
+                <number>4</number>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QDoubleSpinBox" name="doubleSpinBox_ULA_d">
+               <property name="maximum">
+                <double>10.000000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>0.100000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.500000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="1">
               <widget class="QDoubleSpinBox" name="doubleSpinBox_UCA_r">
                <property name="maximum">
                 <double>10.000000000000000</double>
@@ -110,20 +120,24 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="label_12">
+             <item row="5" column="0">
+              <widget class="QLabel" name="label_4">
                <property name="text">
-                <string>Number of antennas:</string>
+                <string>UCA radius:</string>
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
-              <widget class="QSpinBox" name="spinBox_noa">
-               <property name="maximum">
-                <number>200</number>
+             <item row="4" column="0">
+              <widget class="QLabel" name="label_6">
+               <property name="text">
+                <string>Unambiguous radius:</string>
                </property>
-               <property name="value">
-                <number>4</number>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <widget class="QLabel" name="label_uca_unamb_radius">
+               <property name="text">
+                <string>-</string>
                </property>
               </widget>
              </item>
@@ -336,6 +350,13 @@
             </widget>
            </item>
           </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_status">
+          <property name="text">
+           <string>Status:</string>
+          </property>
          </widget>
         </item>
         <item>
