--- a/DOA_simulator.ui
+++ b/DOA_simulator.ui
@@ -162,6 +162,9 @@
             <layout class="QGridLayout" name="gridLayout_5">
              <item row="4" column="0">
               <widget class="QLabel" name="label_13">
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;1.0, -25.4, -31.0&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
                <property name="text">
                 <string>Multipath amplitudes [dBc]:</string>
                </property>
@@ -215,6 +218,9 @@
              </item>
              <item row="6" column="0">
               <widget class="QLabel" name="label_14">
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;-30, 20, 12&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
                <property name="text">
                 <string>Multipath Incident angles:</string>
                </property>
@@ -267,7 +273,7 @@
                 <double>10.000000000000000</double>
                </property>
                <property name="value">
-                <double>1.000000000000000</double>
+                <double>0.100000000000000</double>
                </property>
               </widget>
              </item>
@@ -286,6 +292,9 @@
              </item>
              <item row="6" column="1">
               <widget class="QLineEdit" name="lineEdit_multipath_angles">
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;-30, 20, 12&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
                <property name="text">
                 <string>-30, 20</string>
                </property>
@@ -308,21 +317,28 @@
            <string>DOA estimation processing:</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_8">
-           <item row="2" column="0">
-            <widget class="QCheckBox" name="checkBox_en_MEM">
+           <item row="2" column="1">
+            <widget class="QLabel" name="label_Capon_ULA_res">
              <property name="text">
-              <string>MEM</string>
+              <string>-</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
-            <widget class="QCheckBox" name="checkBox_en_FBavg">
+           <item row="4" column="1">
+            <widget class="QLabel" name="label_MUSIC_ULA_res">
              <property name="text">
-              <string>Forward-backward averaging</string>
+              <string>-</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
+           <item row="3" column="1">
+            <widget class="QLabel" name="label_MEM_ULA_res">
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
             <widget class="QCheckBox" name="checkBox_en_Bartlett">
              <property name="enabled">
               <bool>true</bool>
@@ -335,17 +351,87 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
+           <item row="2" column="0">
+            <widget class="QCheckBox" name="checkBox_en_Capon">
+             <property name="text">
+              <string>Capon</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QCheckBox" name="checkBox_en_FBavg">
+             <property name="text">
+              <string>Forward-backward averaging</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLabel" name="label_Bartlett_ULA_res">
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QLabel" name="label_Bartlett_UCA_res">
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
             <widget class="QCheckBox" name="checkBox_en_MUSIC">
              <property name="text">
               <string>MUSIC</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QCheckBox" name="checkBox_en_Capon">
+           <item row="3" column="0">
+            <widget class="QCheckBox" name="checkBox_en_MEM">
              <property name="text">
-              <string>Capon</string>
+              <string>MEM</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_19">
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Method&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLabel" name="label_20">
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;ULA result&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QLabel" name="label_21">
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;UCA result&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLabel" name="label_Capon_UCA_res">
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QLabel" name="label_MEM_UCA_res">
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="2">
+            <widget class="QLabel" name="label_MUSIC_UCA_res">
+             <property name="text">
+              <string>-</string>
              </property>
             </widget>
            </item>
