--- a/DOA_simulator.ui
+++ b/DOA_simulator.ui
@@ -160,6 +160,20 @@
           <layout class="QGridLayout" name="gridLayout_6">
            <item row="0" column="0">
             <layout class="QGridLayout" name="gridLayout_5">
+             <item row="7" column="1">
+              <widget class="QCheckBox" name="checkBox_multipath_random_angles">
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="label_3">
+               <property name="text">
+                <string>Update time [s]:</string>
+               </property>
+              </widget>
+             </item>
              <item row="4" column="0">
               <widget class="QLabel" name="label_13">
                <property name="toolTip">
@@ -170,13 +184,10 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="label_snr">
-               <property name="toolTip">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Signal to Noise Ratio of the Signal of Interest&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-               </property>
+             <item row="7" column="0">
+              <widget class="QLabel" name="label_16">
                <property name="text">
-                <string>SOI SNR [dB]:</string>
+                <string>Multipath random DoA:</string>
                </property>
               </widget>
              </item>
@@ -203,61 +214,16 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
-              <widget class="QSpinBox" name="spinBox_snr_dB">
-               <property name="minimum">
-                <number>-100</number>
-               </property>
-               <property name="maximum">
-                <number>100</number>
-               </property>
-               <property name="value">
-                <number>10</number>
-               </property>
-              </widget>
-             </item>
-             <item row="6" column="0">
-              <widget class="QLabel" name="label_14">
+             <item row="4" column="1">
+              <widget class="QLineEdit" name="lineEdit_multipath_amplitudes">
                <property name="toolTip">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;-30, 20, 12&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;1.0, -25.4, -31.0&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="text">
-                <string>Multipath Incident angles:</string>
+                <string>0, -1.5</string>
                </property>
-              </widget>
-             </item>
-             <item row="5" column="1">
-              <widget class="QCheckBox" name="checkBox_multipath_random_angles">
-               <property name="text">
-                <string/>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="label_11">
-               <property name="text">
-                <string>Sample size 2^x:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="5" column="0">
-              <widget class="QLabel" name="label_16">
-               <property name="text">
-                <string>Multipath random angles:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="0">
-              <widget class="QLabel" name="label_15">
-               <property name="text">
-                <string>Multipath components:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="label_3">
-               <property name="text">
-                <string>Update time [s]:</string>
+               <property name="maxLength">
+                <number>150</number>
                </property>
               </widget>
              </item>
@@ -277,26 +243,88 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="1">
-              <widget class="QLineEdit" name="lineEdit_multipath_amplitudes">
-               <property name="toolTip">
-                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;1.0, -25.4, -31.0&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-               </property>
-               <property name="text">
-                <string>0, -1.5</string>
-               </property>
-               <property name="maxLength">
-                <number>150</number>
-               </property>
-              </widget>
-             </item>
-             <item row="6" column="1">
+             <item row="8" column="1">
               <widget class="QLineEdit" name="lineEdit_multipath_angles">
                <property name="toolTip">
                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;-30, 20, 12&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="text">
                 <string>-30, 20</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QSpinBox" name="spinBox_snr_dB">
+               <property name="minimum">
+                <number>-100</number>
+               </property>
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>10</number>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="0">
+              <widget class="QLabel" name="label_7">
+               <property name="text">
+                <string>Multipath phases [deg]:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_snr">
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Signal to Noise Ratio of the Signal of Interest&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="text">
+                <string>SOI SNR [dB]:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="1">
+              <widget class="QLineEdit" name="lineEdit_multipath_phases">
+               <property name="text">
+                <string>123, 218</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_11">
+               <property name="text">
+                <string>Sample size 2^x:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="0">
+              <widget class="QLabel" name="label_14">
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comma separated float values. E.g:&amp;quot;-30, 20, 12&amp;quot;&lt;br/&gt;The number of float values specified here should equal to the number of multipath components&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="text">
+                <string>Multipath DoA:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="label_15">
+               <property name="text">
+                <string>Multipath components:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="0">
+              <widget class="QLabel" name="label_8">
+               <property name="text">
+                <string>Multipath random phases:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="1">
+              <widget class="QCheckBox" name="checkBox_multipath_random_phases">
+               <property name="text">
+                <string/>
                </property>
               </widget>
              </item>
